wip: Fixed background image positioning and scrollbar 'jumping' effect.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    width:100vw;
+    overflow-x:hidden;
+  }
+
 body {
     background-image: url(https://static7.depositphotos.com/1073943/681/i/950/depositphotos_6812588-stock-photo-ice-background.jpg?forcejpeg=true);
 
